# GVM

./: CMakeLists.txt  Format.md  gvm_bytecode.hpp  main.py  test.py
ByteVM/: GVM.cpp  Makefile  header.h  info  instructions.hpp  iobytes.hpp  object.h  test.asm
ByteVM/assembler/: assembler.cpp  assembler.hpp
toyVM/: GVM.c  GVM.h  GVM_UTILS.h  Makefile
vm/: ByteInfo.hpp  Objects.cpp  Objects.hpp  StackFrame.hpp  Vm.cpp  Vm.hpp  main.cpp
